    simplify the incremental creation of MOSVM applications and test suites.
  * Added assoc prim to core.
  * Modified open-input-file to correctly return *eof* when read-descr yields
    #f to indicate end of the file.
  * Modified read <port> to correctly use the close method to close the port
    instead of just marking it out of service.
  + t Added lib/xml.ms, a library that parses XML strings and files into S-XML
    data structures. 

- 4/14/2006, Miscellaneous Bug Fixes
  * Added test directory to package target.
  * Overhauled lib/build to rely on core/module and lib/module.
  * Fixed build-exe when used to compile a module to a binary.
  * Added (read-platform-stub platform)
  * Added stub path configuration to bin/situation.sh
  * Restored queue class definition to lib/queue.
  * Extended read-descr-line to support file descriptors.
  * Altered lib/crypto-port to only operate on 64k messages at a time to
    avoid the possibility of a garbled message header causing an absurdly
    large buffer to be constructed.
  * Fixed cyclic dependency of lib/lib on lib/eval by deferment
  * Added import of lib/string-port to lib/format
  * Restored ignore-method to core/macro
  * Added import of lib/eval to lib/mosc.
  * Fixed bug when compiling under mosvm
  * Added export of read-line from lib/string-port
  
- 4/10/2006, Phase Six of the Module System, p6ms
  * Added the core subdirectory -- all modules in core should be 
    embedded by MOSVM applications prior to any imported modules.
  * Added core/file -- wraps file open and file read primitives to create
    a simple API for reading and writing files.
  * Moved read-lisp-file, read-data-file and write-data-file from lib/lib.ms 
    to core/file.ms
  * Added core/config --  provides a generic interface for storing site
    configuration information, or the absence of site configuration.
  * (site-config key) -> value
  * (set-site-config! key value)